article/static/article/css/article.less
@import "static/css/common.less";

@media (min-width: 1024px) {
    .content-container {
	      padding: 0px;
    }
}

.mfp-bg {
    opacity: 1.0;
}

.article-head {
    margin: 0 auto;
    text-align: center;
    font-family: 'Merriweather', sans-serif;
    .page-header {
        margin: 0px;
        .article-title {
            font-size: 34px;
            line-height: 120%;
	          margin: 0px;
	          @media (max-width: 1024px) {
		            margin-top: 0;
	          }
        }
        .article-strap {
            font-size: 18px;
            font-style: italic;
            line-height: 1.3;
        }
    }
    .article-meta {
	      margin: 10px 0;

        a {
            color: #000;
            font-size: 1em;
	          font-weight: bold;
        }

    }
    .featured-content {
        margin: 20px 0;
        img {
            margin: 0 auto;
        }
        .featured-image-caption{
            font-size: 18px;
            text-align: left;
            margin-bottom: 40px;
            font-style: italic;
        }
    }
}

.badge-effect (@color) {
    &:hover {
        color: @color;
        background-color: #eee;

        a {
            color: @color;
        }
    }
}

.social {
    margin: 0px;
    display: inline;
    float: right;
    position: fixed;
    right: 0;
    top: 60%;
    width: 30px;

    .badge {
        font-size: 22px;
        line-height: 0;
        .transition (0.3s);
        margin: 0 0 5px 0;
	      padding: 2px;
        border-radius: 0;
        width: 30px;
        height: 30px;
	      opacity: 0.7;

        &.facebook {
            .badge-effect (#3B5998);
        }

        &.twitter {
            .badge-effect (#3498DB);
        }

        &.whatsapp {
            .badge-effect (#22a215);
        }

        &.comments {
            .badge-effect(#3ac23a);
        }
	      &:hover {
	          opacity: 1;
	      }
    }
}

.leaflet-control-attribution {
    img {
        height: 16px;
        width: 16px;
        display: inline;
        margin: 3px;
        margin-top: -6px;
    }
}

.article-holder {
    padding: 0;
}

@media (max-width: 480px) {
    .article-holder {
	      padding: 0 1em;
    }
}

.related-articles {
    h3 {
        .section-header;
	      margin: 0px 0px 10px 0px;
    }

    .article {
        overflow: auto;
        a {
            text-decoration: none;
            color: black;

            .caption {
                margin-left: 110px;
                .box-sizing(border-box);
                top: 0;

                p {
                    margin: 0;
                    font-size: 12px;
                    line-height: 1.5;
                }


                h4 {
                    color: @headingsColor;
                    margin-top: 0;
                    font-size: 14px;
                }
            }
        }
    }

    &.well {
	      margin-top: 20px;
    }
}

.translations {
    ul.dropdown-menu {
	      background-color: #fff;
	      margin: 0px;
	      padding: 0px;

	      li {
	          a:hover {
		            background-color: #ccc;
	          }
	      }
    }
}

.article-content {
    font-family: "Open Sans", sans-serif;
    font-size: 12.5pt;
    line-height: 1.6;

    p {
	      text-align: justify;
    }

    .well {
	      margin: 0px 0px 20px 20px;
	      padding: 10px;
    }

    blockquote {
	      color: #101010;
	      font-size: 1.6em;
	      border: none;
	      font-style: italic;
	      font-weight: bold;
	      margin: 10px 0;
	      padding: 10px;
	      text-align: center;
	      display: block;

	      &:before {
	          content: open-quote;
	      }
	      &:after {
	          content: close-quote;
	      }
    }

    .translator_bio, .author_bio {
        margin: 1.5em 0;
    }
}

.rich-text {
  p.MsoNormal.center.paragraph-holder{
      line-height: 23px;
  }
    img {
	      max-width: 100%;
	      height: auto;

	      &.left {
	          float: left;
	          margin-right: 20px;
	      }

	      &.right {
	          float: right;
	          margin-left: 20px;
	      }

	      &.full-width {
	          clear: both;
	      }
    }

      .paragraph-holder{
        width: 80%;
        padding-left: 20%;
      }
      .rich-text-image-holder{
        max-width:100%;
      }
    p {
      text-align: left;
      i{
        margin-top: 2px;
      }
      i{
        &.fa-expand {
          font-size: 2em;
          color: white;
          background-color: #151414;
          opacity: 0.6;
          float: right;
          position: absolute;
          right: 0;
          padding: 10px;
        }
      }
    }

    ul {
	      list-style-type: disc;
    }

    .center {
      text-align: center;
      color: grey;
      font-size: small;
      i{
        font-style: normal;
      }
    }

    .left {
	      text-align: left;
    }

    .right {
	      text-align: right;
    }

    .justify {
	      text-align: justify;
    }
}

.responsive-object {
    position: relative;

    iframe, object, embed {
	      position: absolute;
	      top: 0;
	      left: 0;
	      width: 100%;
	      height: 100%;
    }
}

.author-header {
    border: 1px solid;
    border-color: #eee;
    padding: 10px;
    background-color: #e8e8e8;

    .caption {
        h1 {
            margin: 10px 0px;
	          font-size: 34px;
        }
    }
}


.full-row {
    width: 100%;
    margin: 0 auto;
    position: relative;
    img {
	      width: 100%;
	      height: auto;
    }

    a {
	      text-decoration: none;
    }

    @media (max-width: 1024px) {
	      .info {
	          display: none;
	      }
    }
    @media (min-width: 1025px) {
	      .info {
	          text-align: center;
	          position: absolute;
	          top: 85%;
	          left: 45%;

	          .fa-angle-double-down {
		            font-size: 64px;
		            color: #fff;
		            text-shadow: 1px 1px #000;
	          }

	          p {
		            color: #fff;
		            text-shadow: 1px 1px #000;
	          }
	      }
    }
}

.donate_cta {
    background-color: @headingsColor;
    color: #fff;
    text-align: center;

    h4 {
        line-height: 1.5em;
    }

    a {
        color: #fff;
        text-decoration: underline;
        font-size: 1.25em;
    }
}

.scrollToTop {
    font-size: 1px;
    float: right;
    position: fixed;
    right: 0;
    top: 90%;
    width: 30px;
    height: 30px;
    background-color: #000;
    opacity: 0.6;
    margin: 0;
    padding: 2px 0 2px 5px;
    border-radius: 5px;

    a {
	      text-decoration: none;
    }

    .fa-angle-double-up {
	      font-size: 22px;
	      color: #fff;
	      text-shadow: 1px 1px #000;
    }
}

/* Taken from animate.css https://github.com/daneden/animate.css/blob/master/animate.css */
.animated {
    animation-duration: 1.5s;
    animation-fill-mode: both;
}

.animated.infinite {
    animation-iteration-count: infinite;
}

@keyframes bounce {
    from, 20%, 53%, 80%, to {
	      animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
	      transform: translate3d(0,0,0);
    }

    40%, 43% {
	      animation-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
	      transform: translate3d(0, -30px, 0);
    }

    70% {
	      animation-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
	      transform: translate3d(0, -15px, 0);
    }

    90% {
	      transform: translate3d(0,-4px,0);
    }
}

.bounce {
    animation-name: bounce;
    transform-origin: center bottom;
}

@media print {
    .container {
        width: 100%;
    }
    .article-holder {
        width: 100%;
    }
    .rich-text {
        width: 100%;

        h1 {
            font-size: 16px;
        }
        .article-strap {
            font-size: 14px;
        }
        p {
          font-size: 12px;
        }
        embed, iframe, .responsive-object {
            display: none;
        }
        .responsive-object {
            margin: 0;
            padding: 0;
        }
        .img-hover {
            display: none;
        }
        img {
            page-break-before: auto;
            page-break-after: auto;
            page-break-inside: avoid;
        }
    }
    .translations {
        display: none;
    }
    .map-holder {
       display: none;
    }
    .social {
        display: none;
    }
    .announcement {
        display: none;
    }
    .scrollToTop {
        display: none !important;
    }
    .related-articles {
        display: none;
    }
    #footer {
        display: none;
    }
}

